Tag: spacing fixes

--- a/src/components/Tag/Tag.less
+++ b/src/components/Tag/Tag.less
@@ -13,7 +13,7 @@
 	flex-wrap: wrap;
 
 	// margin/padding
-	padding: 0 3px 6px 10px;
+	padding: 1px 3px 6px 10px;
 	margin: @size-S @size-S 0 0;
 
 	// typography
